[gd_scene load_steps=12 format=3 uid="uid://dvr6bm2hlj5h4"]

[ext_resource type="Script" path="res://tank/tank.gd" id="1_0iy80"]
[ext_resource type="Script" path="res://tank/tank_body.gd" id="2_o5qn2"]
[ext_resource type="PackedScene" uid="uid://bfovdi5eowpoe" path="res://items/collectible_item.tscn" id="2_qlwk0"]
[ext_resource type="Texture2D" uid="uid://banqgk8hu7ykt" path="res://tank/tank_placeholder_texture.tres" id="3_t17rk"]
[ext_resource type="PackedScene" uid="uid://bncglf44illq3" path="res://weapons/weapon_leadball.tscn" id="4_1i1mw"]
[ext_resource type="PackedScene" uid="uid://45gqgsjcmu2i" path="res://weapons/weapon_leadball_burst.tscn" id="5_ujlt3"]
[ext_resource type="PackedScene" uid="uid://dtl6c4qaxjdaj" path="res://weapons/weapon_kilonuke.tscn" id="6_gd0o0"]
[ext_resource type="PackedScene" uid="uid://b4tijp25v03r7" path="res://weapons/weapon_deployable.tscn" id="7_jdlf8"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1pofo"]
friction = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqqyu"]
size = Vector2(26, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbvof"]
size = Vector2(6, 30.8)

[node name="Tank" type="Node2D" groups=["Damageable", "Unit"]]
script = ExtResource("1_0iy80")
drop_on_death = ExtResource("2_qlwk0")
turret_color_value = 0.5

[node name="TankBody" type="RigidBody2D" parent="."]
collision_mask = 31
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_1pofo")
center_of_mass_mode = 1
center_of_mass = Vector2(0, -300)
lock_rotation = true
script = ExtResource("2_o5qn2")

[node name="TankBodySprite" type="Sprite2D" parent="TankBody"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_t17rk")

[node name="TankBodyCollision" type="CollisionShape2D" parent="TankBody"]
shape = SubResource("RectangleShape2D_qqqyu")

[node name="TankTurret" type="Area2D" parent="TankBody"]
z_index = -1
position = Vector2(0, -8.86)
collision_mask = 15

[node name="TurretSprite" type="Sprite2D" parent="TankBody/TankTurret"]
position = Vector2(0.2, -10.88)
scale = Vector2(0.05, 0.246875)
texture = ExtResource("3_t17rk")

[node name="TurretCollision" type="CollisionShape2D" parent="TankBody/TankTurret"]
position = Vector2(0.2, -11.28)
shape = SubResource("RectangleShape2D_bbvof")

[node name="WeaponFireLocation" type="Marker2D" parent="TankBody/TankTurret"]
position = Vector2(0, -33.14)

[node name="Weapons" type="Node2D" parent="TankBody/TankTurret"]

[node name="WeaponLeadBall" parent="TankBody/TankTurret/Weapons" node_paths=PackedStringArray("parent_tank", "barrels") instance=ExtResource("4_1i1mw")]
parent_tank = NodePath("../../../..")
barrels = [NodePath("../../WeaponFireLocation")]

[node name="WeaponLeadballBurst" parent="TankBody/TankTurret/Weapons" node_paths=PackedStringArray("parent_tank", "barrels") instance=ExtResource("5_ujlt3")]
parent_tank = NodePath("../../../..")
barrels = [NodePath("../../WeaponFireLocation")]

[node name="WeaponKilonuke" parent="TankBody/TankTurret/Weapons" node_paths=PackedStringArray("parent_tank", "barrels") instance=ExtResource("6_gd0o0")]
parent_tank = NodePath("../../../..")
barrels = [NodePath("../../WeaponFireLocation")]

[node name="WeaponDeployable" parent="TankBody/TankTurret/Weapons" node_paths=PackedStringArray("parent_tank", "barrels") instance=ExtResource("7_jdlf8")]
parent_tank = NodePath("../../../..")
barrels = [NodePath("../../WeaponFireLocation")]

[node name="Bottom" type="Marker2D" parent="TankBody"]
position = Vector2(0, 13)

[node name="Top" type="Marker2D" parent="TankBody"]
position = Vector2(0, -13)

[node name="FiredWeaponContainer" type="Node" parent="."]
